objects/ProductItem.object
<CustomObject>
    <fields>
        <fullName>Current_Cost__c</fullName>
        <label>Current Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Inventory</fullName>
                </value>
                <value>
                    <fullName>Misc Charges</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum__c</fullName>
        <label>Maximum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum__c</fullName>
        <label>Minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Product Items</relationshipLabel>
        <relationshipName>Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_ProductItems</fullName>
        <filterScope>Everything</filterScope>
        <label>All Product Items</label>
    </listViews>
    <listViews>
        <fullName>My_ProductItems</fullName>
        <filterScope>Mine</filterScope>
        <label>My Product Items</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>